--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "start": "node dist/server.js",
     "start-dev": "nodemon --inspect=0.0.0.0:9229 dist/server.js",
     "build-watch": "npm run build && npm-run-all -p watch start-dev",
-    "build": "npm run security-check && npm run build-ts && npm run lint-ts",
+    "build": "npm run build-ts && npm run lint-ts",
     "build-ts": "tsc",
     "lint-ts": "tslint -c tslint.json -p tsconfig.lint.json -t stylish --force",
     "watch": "tsc -w",
-    "security-check": "nsp check",
     "test": "jest",
     "docker-debug": "docker-compose up"
   },
@@ -36,7 +35,6 @@
     "lint-staged": "^7.2.2",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
-    "nsp": "^3.2.1",
     "prettier": "^1.14.2",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
@@ -56,7 +54,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,ts,tsx,css,scss}": [
-      "prettier --write",
+      "prettier --print-width 120 --write",
       "git add"
     ]
   }
